--- a/produto02.html
+++ b/produto02.html
@@ -11,7 +11,7 @@
     <header><a href="index.html">
       <h1>LuleStore</h1>
   </a></header>
-    <a href="carrinho.html"><img src="images/bag.png" alt="carrinho"></a>
+    <a href="carrinho.html"><img src="https://img.icons8.com/pastel-glyph/64/FFFFFF/paper-bag--v2.png" alt="carrinho"></a>
     </div>
     <div id="buy-page">
         <div>
