--- a/formulario-checkout.html
+++ b/formulario-checkout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Formulário de checkout</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -94,6 +95,12 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <header><a href="index.html">
+          <h1>LuleStore</h1>
+      </a></header>
+        <a href="carrinho.html"><img src="https://img.icons8.com/pastel-glyph/64/FFFFFF/paper-bag--v2.png" alt="carrinho"></a>
+        </div>
     <h1>Finalizar compra</h1>
     <form action="url_para_enviar_dados_do_formulario" method="post">
         <fieldset>
